tests/single_error.check
<error>

1,1: error: invalid character
	.
	^
